# BrainGenix-EVM

./: CMakeLists.txt  README.md  vcpkg.json
Docs/: API.md
Source/Core/: BGStatusCode.h  CMakeLists.txt  Main.cpp  Main.h
Source/Core/Config/: Config.h  ConfigDefaults.h  ConfigFileParser.cpp  ConfigFileParser.h  ConfigurationManager.cpp  ConfigurationManager.h
Source/Core/Metrics/: N1Metrics.cpp  N1Metrics.h  README.md
Source/Core/NESInteraction/: NESRequest.cpp  NESRequest.h  NESRunSimulation.cpp  NESRunSimulation.h  NESSimLoad.cpp  NESSimLoad.h  README.md
Source/Core/PCRegistration/: PCRegistrationRPCManager.cpp  README.md  SimpleRegistration.cpp  SimpleRegistration.h
Source/Core/RPC/: APIStatusCode.cpp  APIStatusCode.h  ManagerTaskData.cpp  ManagerTaskData.h  RPCHandlerHelper.cpp  RPCHandlerHelper.h  RPCManager.cpp  RPCManager.h  RouteAndHandler.h  SafeClient.cpp  SafeClient.h  StaticRoutes.cpp  StaticRoutes.h
Source/Core/Util/: JSONHelpers.cpp  JSONHelpers.h  JSONUtils.cpp  JSONUtils.h  LogLogo.cpp  LogLogo.h
Source/Core/Validation/: Connectome.h  DataCollector.cpp  DataCollector.h  README.md  SCValidation.cpp  SCValidation.h  ValidationConfig.h  ValidationRPCInterface.cpp  ValidationRPCInterface.h  ValidationTestData.cpp  ValidationTestData.h
Source/Core/Vector/: Vec3D.cpp  Vec3D.h
Source/Data/: BrainGenix-EVM.service  EVM.yaml  postinst  prerm
Source/Renderer/: CMakeLists.txt
Source/Renderer/BG/Renderer/: Interface.cpp  Interface.h
Source/Renderer/BG/Renderer/EncoderPool/: EncoderPool.cpp  EncoderPool.h  Image.cpp  Image.h
Source/Renderer/BG/Renderer/Math/: MathHelpers.cpp  MathHelpers.h
Source/Renderer/BG/Renderer/SceneGraph/: CameraHelpers.cpp  CameraHelpers.h  GeometryBuilder.cpp  GeometryBuilder.h  Manager.cpp  Manager.h  OffscreenRenderHelpers.cpp  OffscreenRenderHelpers.h  renderdoc_app.h
Source/Renderer/BG/Renderer/SceneGraph/Primitive/: Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Sphere.cpp  Sphere.h
Source/Renderer/BG/Renderer/SceneGraph/Shader/: Phong.cpp  Phong.h  Shader.cpp  Shader.h
Source/Renderer/BG/Renderer/State/: RenderData.cpp  RenderData.h  Scene.cpp  Scene.h
Tools/: Run.sh
